Remove supportdesk mobile application and associated api routes
